reactive mongo setup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,6 @@
 appName = "PlayScala1"
 application.router = prod.Routes
+
+#mongo DB configuration
+mongodb.uri = "mongodb://localhost:27017/playScala"
+logger.reactivemongo=INFO
